--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -21,8 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('/Users/chowshengyang/Documents/BT4222_Fraud_Detection_CRWKIJ/datasets')\n",
-    "transaction_train = pd.read_csv('train_transaction.csv')"
+    "#os.chdir('/Users/chowshengyang/Documents/BT4222_Fraud_Detection_CRWKIJ/datasets')\n",
+    "transaction_train = pd.read_csv('train_transaction.csv')\n",
+    "print('yoyo this me')"
    ]
   },
   {
