--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "#os.chdir('/Users/chowshengyang/Documents/BT4222_Fraud_Detection_CRWKIJ/datasets')\n",
     "transaction_train = pd.read_csv('train_transaction.csv')\n",
-    "print('yoyo this me')"
+    "print('fuck this module bro wtfffffff')"
    ]
   },
   {
