--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -22,8 +22,7 @@
    "outputs": [],
    "source": [
     "#os.chdir('/Users/chowshengyang/Documents/BT4222_Fraud_Detection_CRWKIJ/datasets')\n",
-    "transaction_train = pd.read_csv('train_transaction.csv')\n",
-    "print('fuck this module bro wtfffffff')"
+    "transaction_train = pd.read_csv('train_transaction.csv')\n"
    ]
   },
   {
