--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -18,271 +19,8 @@
    "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#os.chdir('/Users/chowshengyang/Documents/BT4222_Fraud_Detection_CRWKIJ/datasets')\n",
-    "# transaction_train = pd.read_csv('train_transaction.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1 = pd.read_csv('/Users/remuslum/Downloads/ieee-fraud-detection/train_transaction.csv')\n",
-    "df2 = pd.read_csv('/Users/remuslum/Downloads/ieee-fraud-detection/train_identity.csv')\n",
-    "\n",
-    "df_train = df1.merge(df2, on = 'TransactionID', how = 'left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TransactionID</th>\n",
-       "      <th>isFraud</th>\n",
-       "      <th>TransactionDT</th>\n",
-       "      <th>TransactionAmt</th>\n",
-       "      <th>ProductCD</th>\n",
-       "      <th>card1</th>\n",
-       "      <th>card2</th>\n",
-       "      <th>card3</th>\n",
-       "      <th>card4</th>\n",
-       "      <th>card5</th>\n",
-       "      <th>...</th>\n",
-       "      <th>id_31</th>\n",
-       "      <th>id_32</th>\n",
-       "      <th>id_33</th>\n",
-       "      <th>id_34</th>\n",
-       "      <th>id_35</th>\n",
-       "      <th>id_36</th>\n",
-       "      <th>id_37</th>\n",
-       "      <th>id_38</th>\n",
-       "      <th>DeviceType</th>\n",
-       "      <th>DeviceInfo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2987000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>86400</td>\n",
-       "      <td>68.5</td>\n",
-       "      <td>W</td>\n",
-       "      <td>13926</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>discover</td>\n",
-       "      <td>142.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2987001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>86401</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>W</td>\n",
-       "      <td>2755</td>\n",
-       "      <td>404.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>mastercard</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2987002</td>\n",
-       "      <td>0</td>\n",
-       "      <td>86469</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>W</td>\n",
-       "      <td>4663</td>\n",
-       "      <td>490.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>visa</td>\n",
-       "      <td>166.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2987003</td>\n",
-       "      <td>0</td>\n",
-       "      <td>86499</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>W</td>\n",
-       "      <td>18132</td>\n",
-       "      <td>567.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>mastercard</td>\n",
-       "      <td>117.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2987004</td>\n",
-       "      <td>0</td>\n",
-       "      <td>86506</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>H</td>\n",
-       "      <td>4497</td>\n",
-       "      <td>514.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>mastercard</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>samsung browser 6.2</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>2220x1080</td>\n",
-       "      <td>match_status:2</td>\n",
-       "      <td>T</td>\n",
-       "      <td>F</td>\n",
-       "      <td>T</td>\n",
-       "      <td>T</td>\n",
-       "      <td>mobile</td>\n",
-       "      <td>SAMSUNG SM-G892A Build/NRD90M</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 434 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   TransactionID  isFraud  TransactionDT  TransactionAmt ProductCD  card1  \\\n",
-       "0        2987000        0          86400            68.5         W  13926   \n",
-       "1        2987001        0          86401            29.0         W   2755   \n",
-       "2        2987002        0          86469            59.0         W   4663   \n",
-       "3        2987003        0          86499            50.0         W  18132   \n",
-       "4        2987004        0          86506            50.0         H   4497   \n",
-       "\n",
-       "   card2  card3       card4  card5  ...                id_31  id_32  \\\n",
-       "0    NaN  150.0    discover  142.0  ...                  NaN    NaN   \n",
-       "1  404.0  150.0  mastercard  102.0  ...                  NaN    NaN   \n",
-       "2  490.0  150.0        visa  166.0  ...                  NaN    NaN   \n",
-       "3  567.0  150.0  mastercard  117.0  ...                  NaN    NaN   \n",
-       "4  514.0  150.0  mastercard  102.0  ...  samsung browser 6.2   32.0   \n",
-       "\n",
-       "       id_33           id_34  id_35 id_36 id_37  id_38  DeviceType  \\\n",
-       "0        NaN             NaN    NaN   NaN   NaN    NaN         NaN   \n",
-       "1        NaN             NaN    NaN   NaN   NaN    NaN         NaN   \n",
-       "2        NaN             NaN    NaN   NaN   NaN    NaN         NaN   \n",
-       "3        NaN             NaN    NaN   NaN   NaN    NaN         NaN   \n",
-       "4  2220x1080  match_status:2      T     F     T      T      mobile   \n",
-       "\n",
-       "                      DeviceInfo  \n",
-       "0                            NaN  \n",
-       "1                            NaN  \n",
-       "2                            NaN  \n",
-       "3                            NaN  \n",
-       "4  SAMSUNG SM-G892A Build/NRD90M  \n",
-       "\n",
-       "[5 rows x 434 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Drop missing values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def top_missing_cols(df,n=10,thresh=80):\n",
-    "    \"\"\"\n",
-    "    returns missing columns in dataframe with missing values percent > thresh\n",
-    "    if n=None. It will gave whole dataframe with missing values percent > thresh\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    dff = (df.isnull().sum()/df.shape[0])*100\n",
-    "    dff = dff.reset_index()\n",
-    "    dff.columns = ['col','missing_percent']\n",
-    "    dff = dff.sort_values(by=['missing_percent'],ascending=False).reset_index(drop=True)\n",
-    "    print(f'There are {df.isnull().any().sum()} columns in this dataset with missing values.')\n",
-    "    print(f'There are {dff[dff[\"missing_percent\"] > thresh].shape[0]} columns with missing percent values than {thresh}%')\n",
-    "    if n:\n",
-    "        return dff.head(n)\n",
-    "    else:\n",
-    "        return dff"
-   ]
-  }, {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1456,7 +1194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sy",
    "language": "python",
    "name": "python3"
   },
@@ -1470,8 +1208,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  }
+   "version": "3.11.4"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
