Added Clustering Notebook

--- a/1. Preprocessing - Removing Missing Values.ipynb
+++ b/1. Preprocessing - Removing Missing Values.ipynb
@@ -27,39 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "602c9c38",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Ignoring invalid distribution -atsy (/Users/remuslum/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -atsy (/Users/remuslum/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0mRequirement already satisfied: kmodes in /Users/remuslum/opt/anaconda3/lib/python3.8/site-packages (0.12.2)\n",
-      "Requirement already satisfied: numpy>=1.10.4 in /Users/remuslum/opt/anaconda3/lib/python3.8/site-packages (from kmodes) (1.24.2)\n",
-      "Requirement already satisfied: scipy>=0.13.3 in /Users/remuslum/opt/anaconda3/lib/python3.8/site-packages (from kmodes) (1.10.0)\n",
-      "Requirement already satisfied: scikit-learn>=0.22.0 in /Users/remuslum/opt/anaconda3/lib/python3.8/site-packages (from kmodes) (1.1.3)\n",
-      "Requirement already satisfied: joblib>=0.11 in /Users/remuslum/opt/anaconda3/lib/python3.8/site-packages (from kmodes) (1.0.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/remuslum/opt/anaconda3/lib/python3.8/site-packages (from scikit-learn>=0.22.0->kmodes) (2.1.0)\n",
-      "\u001b[33mWARNING: Ignoring invalid distribution -atsy (/Users/remuslum/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -atsy (/Users/remuslum/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -atsy (/Users/remuslum/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -atsy (/Users/remuslum/opt/anaconda3/lib/python3.8/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install kmodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "9abc1e03",
    "metadata": {},
    "outputs": [],
@@ -69,8 +36,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from kmodes.kprototypes import KPrototypes"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -91,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d7e3256b",
    "metadata": {},
    "outputs": [],
@@ -149,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7ccf2022",
    "metadata": {},
    "outputs": [
@@ -157,9 +123,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train shape (590540, 213) test shape (506691, 213)\n",
-      "CPU times: user 21.2 s, sys: 2.96 s, total: 24.1 s\n",
-      "Wall time: 24.8 s\n"
+      "Train shape (590540, 214) test shape (506691, 213)\n",
+      "CPU times: user 24.1 s, sys: 5.15 s, total: 29.2 s\n",
+      "Wall time: 32.3 s\n"
      ]
     }
    ],
@@ -177,7 +143,6 @@
     "X_test = X_test.merge(test_id, how='left', left_index=True, right_index=True)\n",
     "# TARGET\n",
     "y_train = X_train['isFraud'].copy()\n",
-    "del train_id, test_id, X_train['isFraud']; x = gc.collect()\n",
     "# PRINT STATUS\n",
     "print('Train shape',X_train.shape,'test shape',X_test.shape)"
    ]
@@ -208,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9741b6d9",
    "metadata": {},
    "outputs": [],
@@ -230,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f57ae33f",
    "metadata": {},
    "outputs": [
@@ -252,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "c1d5d131",
    "metadata": {},
    "outputs": [],
@@ -270,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d4b33273",
    "metadata": {},
    "outputs": [],
@@ -281,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "b00d5b46",
    "metadata": {},
    "outputs": [
@@ -289,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(590540, 112)\n",
+      "(590540, 113)\n",
       "(506691, 112)\n"
      ]
     }
@@ -301,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "5b11603e",
    "metadata": {},
    "outputs": [
@@ -323,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "f0111b34",
    "metadata": {},
    "outputs": [
@@ -435,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "id": "9087eb1f",
    "metadata": {},
    "outputs": [
@@ -443,6 +408,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "card2 : 1.71\n",
+      "card3 : 0.59\n",
+      "card4 : 0.61\n",
+      "card5 : 0.9\n",
+      "card6 : 0.59\n",
+      "addr1 : 12.95\n",
+      "addr2 : 12.95\n",
+      "dist1 : 57.47\n",
+      "P_emaildomain : 13.66\n",
       "C1 : 0.0\n",
       "C2 : 0.0\n",
       "C3 : 0.0\n",
@@ -455,8 +429,80 @@
       "C10 : 0.0\n",
       "C11 : 0.0\n",
       "C12 : 0.0\n",
-      "C13 : 0.62\n",
-      "C14 : 0.0\n"
+      "C13 : 0.94\n",
+      "C14 : 0.0\n",
+      "D1 : 1.19\n",
+      "D2 : 46.33\n",
+      "D3 : 40.09\n",
+      "D4 : 15.17\n",
+      "D5 : 44.28\n",
+      "D10 : 2.48\n",
+      "D11 : 34.84\n",
+      "D15 : 2.38\n",
+      "M1 : 34.86\n",
+      "M2 : 34.86\n",
+      "M3 : 34.86\n",
+      "M4 : 46.92\n",
+      "M5 : 61.11\n",
+      "M6 : 31.37\n",
+      "M7 : 46.38\n",
+      "M8 : 46.38\n",
+      "M9 : 46.38\n",
+      "V1 : 34.84\n",
+      "V3 : 34.84\n",
+      "V4 : 34.84\n",
+      "V6 : 34.84\n",
+      "V8 : 34.84\n",
+      "V11 : 34.84\n",
+      "V13 : 2.48\n",
+      "V14 : 2.48\n",
+      "V17 : 2.48\n",
+      "V20 : 2.48\n",
+      "V23 : 2.48\n",
+      "V26 : 2.48\n",
+      "V27 : 2.48\n",
+      "V30 : 2.48\n",
+      "V36 : 15.17\n",
+      "V37 : 15.17\n",
+      "V40 : 15.17\n",
+      "V41 : 15.17\n",
+      "V44 : 15.17\n",
+      "V47 : 15.17\n",
+      "V48 : 15.17\n",
+      "V54 : 2.55\n",
+      "V56 : 2.55\n",
+      "V59 : 2.55\n",
+      "V62 : 2.55\n",
+      "V65 : 2.55\n",
+      "V67 : 2.55\n",
+      "V68 : 2.55\n",
+      "V70 : 2.55\n",
+      "V76 : 2.38\n",
+      "V78 : 2.38\n",
+      "V80 : 2.38\n",
+      "V82 : 2.38\n",
+      "V86 : 2.38\n",
+      "V88 : 2.38\n",
+      "V89 : 2.38\n",
+      "V91 : 2.38\n",
+      "V281 : 1.19\n",
+      "V283 : 1.19\n",
+      "V284 : 0.0\n",
+      "V285 : 0.0\n",
+      "V286 : 0.0\n",
+      "V289 : 1.19\n",
+      "V291 : 0.0\n",
+      "V294 : 0.0\n",
+      "V296 : 1.19\n",
+      "V297 : 0.0\n",
+      "V301 : 1.19\n",
+      "V303 : 0.0\n",
+      "V305 : 0.0\n",
+      "V307 : 0.0\n",
+      "V309 : 0.0\n",
+      "V310 : 0.0\n",
+      "V314 : 1.19\n",
+      "V320 : 0.0\n"
      ]
     }
    ],
@@ -483,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "25aa98bf",
    "metadata": {},
    "outputs": [],
@@ -496,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "0fcda91a",
    "metadata": {},
    "outputs": [
@@ -542,7 +588,7 @@
        " 'V320']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "957b9dea",
    "metadata": {},
    "outputs": [],
@@ -564,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "db26d76b",
    "metadata": {},
    "outputs": [
@@ -572,7 +618,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of columns in train dataset: (578081, 112)\n",
+      "Number of columns in train dataset: (578081, 113)\n",
       "Number of columns in test dataset: (491009, 112)\n"
      ]
     }
@@ -592,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "d84b172b",
    "metadata": {},
    "outputs": [
@@ -602,7 +648,7 @@
        "['D2', 'D3', 'D4', 'D5', 'D10', 'D11', 'D15']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "4d4101bc",
    "metadata": {},
    "outputs": [
@@ -690,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "3569ea87",
    "metadata": {},
    "outputs": [],
@@ -702,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "6cf8abc5",
    "metadata": {},
    "outputs": [],
@@ -717,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "d094932f",
    "metadata": {},
    "outputs": [
@@ -747,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "d8100b60",
    "metadata": {},
    "outputs": [
@@ -757,7 +803,7 @@
        "['M1', 'M2', 'M3', 'M4', 'M5', 'M6', 'M7', 'M8', 'M9']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "4687dbb4",
    "metadata": {},
    "outputs": [
@@ -843,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "31352780",
    "metadata": {},
    "outputs": [],
@@ -855,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "0d8c95a9",
    "metadata": {},
    "outputs": [],
@@ -866,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "c6b82b3c",
    "metadata": {},
    "outputs": [],
@@ -881,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "id": "f24e0df3",
    "metadata": {},
    "outputs": [],
@@ -896,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "ce35ad23",
    "metadata": {},
    "outputs": [
@@ -926,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "id": "61849ddc",
    "metadata": {},
    "outputs": [
@@ -972,7 +1018,7 @@
        " 'V91']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "1f6b703b",
    "metadata": {},
    "outputs": [],
@@ -1007,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "97a3380b",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "id": "eda35321",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1093,7 @@
        "['addr1', 'addr2', 'dist1', 'P_emaildomain']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "id": "4d765b63",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1156,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
+   "id": "e171e53e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean = X_train['addr1'].mean()\n",
+    "X_train['addr1'] = X_train['addr1'].fillna(mean)\n",
+    "X_test['addr1'] = X_test['addr1'].fillna(mean)\n",
+    "\n",
+    "X_train[['addr2','dist1','P_emaildomain']] = X_train[['addr2','dist1','P_emaildomain']].fillna(mode_train[['addr2','dist1','P_emaildomain']])\n",
+    "X_test[['addr2','dist1','P_emaildomain']] = X_test[['addr2','dist1','P_emaildomain']].fillna(mode_test[['addr2','dist1','P_emaildomain']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "a756b2a7",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "id": "30554597",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1224,7 @@
        " 'C14']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "id": "cebc3701",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 37,
    "id": "f6d02514",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1296,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 38,
+   "id": "1fab54d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"isFraud\" in X_train)\n",
+    "print(\"isFraud\" in X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "68120c85",
    "metadata": {},
    "outputs": [],
