--- a/LGB with UID.ipynb
+++ b/LGB with UID.ipynb
@@ -2476,9 +2476,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gbm",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "gbm"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2490,7 +2490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
