--- a/1. Preprocessing.ipynb
+++ b/1. Preprocessing.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "From our initial data analysis, we see that many columns have NaNs, and some columns have NaNs at the same position, there might be some link between these columns, thus we will be looking into it.\n",
     "\n",
-    "We have removed columns that have NaN of more than 70% as it might cause biasness.\n",
+    "We have removed columns that have NaN of more than 70% as high occurrence of missing values in a dataset can introduce bias by distorting the relationships between features, potentially resulting in inaccurate predictions. This bias can arise due to the loss of representative data, distorted data patterns, overreliance on available information, and unintended associations between variables. \n",
     "\n",
     "From the NAN analysis, we can see the following NAN structure for the following columns:\n",
     "\n",
