--- a/3. SMOTE.ipynb
+++ b/3. SMOTE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -105,8 +105,8 @@
       "0    558065\n",
       "1     20016\n",
       "Name: count, dtype: int64\n",
-      "CPU times: user 2.97 s, sys: 436 ms, total: 3.41 s\n",
-      "Wall time: 3.76 s\n"
+      "CPU times: user 3.05 s, sys: 474 ms, total: 3.52 s\n",
+      "Wall time: 3.86 s\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -232,15 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 324 ms, sys: 97.1 ms, total: 421 ms\n",
-      "Wall time: 474 ms\n"
+      "CPU times: user 322 ms, sys: 98.5 ms, total: 421 ms\n",
+      "Wall time: 452 ms\n"
      ]
     }
    ],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,15 +377,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cents, addr1_FE , card1_FE , card2_FE , card3_FE , P_emaildomain_FE , card1_addr1 , card1_addr1_P_emaildomain , card1_addr1_FE , card1_addr1_P_emaildomain_FE , 'TransactionAmt_card1_mean' , 'TransactionAmt_card1_std' , 'TransactionAmt_card1_addr1_mean' , 'TransactionAmt_card1_addr1_std' , 'TransactionAmt_card1_addr1_P_emaildomain_mean' , 'TransactionAmt_card1_addr1_P_emaildomain_std' , 'D11_card1_mean' , 'D11_card1_std' , 'D11_card1_addr1_mean' , 'D11_card1_addr1_std' , 'D11_card1_addr1_P_emaildomain_mean' , 'D11_card1_addr1_P_emaildomain_std' , CPU times: user 1.72 s, sys: 530 ms, total: 2.25 s\n",
-      "Wall time: 2.48 s\n"
+      "cents, addr1_FE , card1_FE , card2_FE , card3_FE , P_emaildomain_FE , card1_addr1 , card1_addr1_P_emaildomain , card1_addr1_FE , card1_addr1_P_emaildomain_FE , 'TransactionAmt_card1_mean' , 'TransactionAmt_card1_std' , 'TransactionAmt_card1_addr1_mean' , 'TransactionAmt_card1_addr1_std' , 'TransactionAmt_card1_addr1_P_emaildomain_mean' , 'TransactionAmt_card1_addr1_P_emaildomain_std' , 'D11_card1_mean' , 'D11_card1_std' , 'D11_card1_addr1_mean' , 'D11_card1_addr1_std' , 'D11_card1_addr1_P_emaildomain_mean' , 'D11_card1_addr1_P_emaildomain_std' , CPU times: user 1.75 s, sys: 686 ms, total: 2.43 s\n",
+      "Wall time: 2.98 s\n"
      ]
     }
    ],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "metadata": {
     "scrolled": true
    },
@@ -469,15 +469,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Features: 100%|█████████████████████████████████████████████| 139/139 [00:38<00:00,  3.61it/s]"
+      "Processing Features: 100%|█████████████████████████████████████████████| 139/139 [00:42<00:00,  3.29it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 42s, sys: 46.7 s, total: 4min 29s\n",
-      "Wall time: 38.5 s\n"
+      "CPU times: user 3min 47s, sys: 52.5 s, total: 4min 40s\n",
+      "Wall time: 42.3 s\n"
      ]
     },
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -568,29 +568,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original train shape: (578081, 139) Resampled train shape: (1116130, 139)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Apply SMOTE to balance the class distribution\n",
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
-    "smote = SMOTE(random_state=42)\n",
-    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
+    "# smote = SMOTE(random_state=42)\n",
+    "# X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
     "\n",
-    "print('Original train shape:', X_train.shape, 'Resampled train shape:', X_train_resampled.shape)\n",
+    "# print('Original train shape:', X_train.shape, 'Resampled train shape:', X_train_resampled.shape)\n",
     "\n",
-    "X_train = X_train_resampled\n",
-    "y_train = y_train_resampled\n",
-    "del X_train_resampled, y_train_resampled; x = gc.collect()"
+    "# X_train = X_train_resampled\n",
+    "# y_train = y_train_resampled\n",
+    "# del X_train_resampled, y_train_resampled; x = gc.collect()"
    ]
   },
   {
@@ -610,20 +602,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.concat([X_train,y_train], axis = 1)\n",
-    "X_train = X_train.sample(frac=1, random_state=42)\n",
+    "# X_train = pd.concat([X_train,y_train], axis = 1)\n",
+    "# X_train = X_train.sample(frac=1, random_state=42)\n",
     "\n",
-    "y_train = X_train['isFraud'].copy()\n",
-    "del X_train['isFraud']"
+    "# y_train = X_train['isFraud'].copy()\n",
+    "# del X_train['isFraud']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +626,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -642,62 +648,48 @@
      "output_type": "stream",
      "text": [
       "LGBoost version: 3.3.5\n",
-      "Class imbalanace ratio: 1.0\n",
+      "Class imbalanace ratio: 27.8809\n",
       "Training until validation scores don't improve for 100 rounds\n",
-      "[100]\tvalid_0's auc: 0.990328\n",
-      "[200]\tvalid_0's auc: 0.993421\n",
-      "[300]\tvalid_0's auc: 0.994766\n",
-      "[400]\tvalid_0's auc: 0.995548\n",
-      "[500]\tvalid_0's auc: 0.996065\n",
-      "[600]\tvalid_0's auc: 0.996461\n",
-      "[700]\tvalid_0's auc: 0.996766\n",
-      "[800]\tvalid_0's auc: 0.996999\n",
-      "[900]\tvalid_0's auc: 0.997192\n",
-      "[1000]\tvalid_0's auc: 0.997361\n",
-      "[1100]\tvalid_0's auc: 0.9975\n",
-      "[1200]\tvalid_0's auc: 0.997623\n",
-      "[1300]\tvalid_0's auc: 0.997744\n",
-      "[1400]\tvalid_0's auc: 0.997849\n",
-      "[1500]\tvalid_0's auc: 0.997931\n",
-      "[1600]\tvalid_0's auc: 0.997997\n",
-      "[1700]\tvalid_0's auc: 0.998076\n",
-      "[1800]\tvalid_0's auc: 0.998141\n",
-      "[1900]\tvalid_0's auc: 0.998203\n",
-      "[2000]\tvalid_0's auc: 0.998254\n",
-      "[2100]\tvalid_0's auc: 0.998311\n",
-      "[2200]\tvalid_0's auc: 0.998356\n",
-      "[2300]\tvalid_0's auc: 0.998402\n",
-      "[2400]\tvalid_0's auc: 0.998441\n",
-      "[2500]\tvalid_0's auc: 0.998479\n",
-      "[2600]\tvalid_0's auc: 0.998511\n",
-      "[2700]\tvalid_0's auc: 0.998542\n",
-      "[2800]\tvalid_0's auc: 0.998573\n",
-      "[2900]\tvalid_0's auc: 0.998604\n",
-      "[3000]\tvalid_0's auc: 0.998635\n",
-      "[3100]\tvalid_0's auc: 0.998657\n",
-      "[3200]\tvalid_0's auc: 0.998679\n",
-      "[3300]\tvalid_0's auc: 0.998701\n",
-      "[3400]\tvalid_0's auc: 0.998723\n",
-      "[3500]\tvalid_0's auc: 0.998743\n",
-      "[3600]\tvalid_0's auc: 0.998761\n",
-      "[3700]\tvalid_0's auc: 0.998782\n",
-      "[3800]\tvalid_0's auc: 0.998801\n",
-      "[3900]\tvalid_0's auc: 0.998816\n",
-      "[4000]\tvalid_0's auc: 0.998832\n",
-      "[4100]\tvalid_0's auc: 0.998847\n",
-      "[4200]\tvalid_0's auc: 0.998859\n",
-      "[4300]\tvalid_0's auc: 0.998872\n",
-      "[4400]\tvalid_0's auc: 0.998885\n",
-      "[4500]\tvalid_0's auc: 0.998898\n",
-      "[4600]\tvalid_0's auc: 0.998911\n",
-      "[4700]\tvalid_0's auc: 0.998922\n",
-      "[4800]\tvalid_0's auc: 0.998931\n",
-      "[4900]\tvalid_0's auc: 0.998939\n",
-      "[5000]\tvalid_0's auc: 0.998949\n",
-      "Did not meet early stopping. Best iteration is:\n",
-      "[5000]\tvalid_0's auc: 0.998949\n",
-      "CPU times: user 34min 27s, sys: 4min 10s, total: 38min 38s\n",
-      "Wall time: 5min 38s\n"
+      "[100]\tvalid_0's auc: 0.974187\n",
+      "[200]\tvalid_0's auc: 0.982751\n",
+      "[300]\tvalid_0's auc: 0.987417\n",
+      "[400]\tvalid_0's auc: 0.990009\n",
+      "[500]\tvalid_0's auc: 0.991293\n",
+      "[600]\tvalid_0's auc: 0.992066\n",
+      "[700]\tvalid_0's auc: 0.992658\n",
+      "[800]\tvalid_0's auc: 0.993133\n",
+      "[900]\tvalid_0's auc: 0.99345\n",
+      "[1000]\tvalid_0's auc: 0.993722\n",
+      "[1100]\tvalid_0's auc: 0.993919\n",
+      "[1200]\tvalid_0's auc: 0.99412\n",
+      "[1300]\tvalid_0's auc: 0.994281\n",
+      "[1400]\tvalid_0's auc: 0.994424\n",
+      "[1500]\tvalid_0's auc: 0.99452\n",
+      "[1600]\tvalid_0's auc: 0.994632\n",
+      "[1700]\tvalid_0's auc: 0.994729\n",
+      "[1800]\tvalid_0's auc: 0.994847\n",
+      "[1900]\tvalid_0's auc: 0.994925\n",
+      "[2000]\tvalid_0's auc: 0.995012\n",
+      "[2100]\tvalid_0's auc: 0.995048\n",
+      "[2200]\tvalid_0's auc: 0.995136\n",
+      "[2300]\tvalid_0's auc: 0.995198\n",
+      "[2400]\tvalid_0's auc: 0.995254\n",
+      "[2500]\tvalid_0's auc: 0.995341\n",
+      "[2600]\tvalid_0's auc: 0.995387\n",
+      "[2700]\tvalid_0's auc: 0.995414\n",
+      "[2800]\tvalid_0's auc: 0.995447\n",
+      "[2900]\tvalid_0's auc: 0.995485\n",
+      "[3000]\tvalid_0's auc: 0.9955\n",
+      "[3100]\tvalid_0's auc: 0.995503\n",
+      "[3200]\tvalid_0's auc: 0.995528\n",
+      "[3300]\tvalid_0's auc: 0.995573\n",
+      "[3400]\tvalid_0's auc: 0.995587\n",
+      "[3500]\tvalid_0's auc: 0.995614\n",
+      "[3600]\tvalid_0's auc: 0.995639\n",
+      "Early stopping, best iteration is:\n",
+      "[3584]\tvalid_0's auc: 0.995644\n",
+      "CPU times: user 22min 53s, sys: 3min 3s, total: 25min 57s\n",
+      "Wall time: 3min 53s\n"
      ]
     }
    ],
@@ -728,18 +720,21 @@
     "    lgb.callback.log_evaluation(period=100)  # Add this callback for verbosity\n",
     "]\n",
     "\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train.loc[idxT, selected_features], y_train.loc[idxT])\n",
+    "X_valid_resampled, y_valid_resampled = smote.fit_resample(X_train.loc[idxV, selected_features], y_train.loc[idxV])\n",
+    "\n",
     "# Fit the model with callbacks\n",
     "h = clf.fit(\n",
-    "    X_train.loc[idxT, selected_features],\n",
-    "    y_train[idxT],\n",
-    "    eval_set=[(X_train.loc[idxV, selected_features], y_train[idxV])],\n",
+    "    X_train_resampled,y_train_resampled,\n",
+    "    eval_set=[(X_valid_resampled, y_valid_resampled)],\n",
     "    callbacks=callbacks  # Use the callbacks argument for controlling verbosity\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
