--- a/4. Compiled Model.ipynb
+++ b/4. Compiled Model.ipynb
@@ -2206,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
@@ -2218,7 +2218,18 @@
       "CatBoost with UID out of fold cross-validation = 0.9492914273313773\n",
       "LGBM with UID out of fold cross validation = 0.9522265147304445\n",
       "XGB with UID out of fold cross validation = 0.9513686688916809\n",
-      "Ensemble ROC AUC Score: 0.9543718199353949\n"
+      "Ensemble ROC AUC Score: 0.9543718199353949\n",
+      "\n",
+      "Best F1 Score: 0.6645002176120702\n",
+      "Best Threshold: 0.3\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[555067   2998]\n",
+      " [  8565  11451]]\n",
+      "Accuracy: 0.979997612791287\n",
+      "Precision: 0.7925115924977507\n",
+      "Recall: 0.5720923261390888\n",
+      "F1 Score: 0.6645002176120702\n"
      ]
     }
    ],
@@ -2251,7 +2262,48 @@
     "ensemble_valid_preds += weight_catboost * cat_oof\n",
     "\n",
     "ensemble_roc_auc = roc_auc_score(y_train, ensemble_valid_preds)\n",
-    "print('Ensemble ROC AUC Score:', ensemble_roc_auc)\n"
+    "print('Ensemble ROC AUC Score:', ensemble_roc_auc)\n",
+    "\n",
+    "best_f1_score = 0\n",
+    "best_threshold = 0\n",
+    "\n",
+    "for threshold in np.arange(0.1, 1.0, 0.1):\n",
+    "    ensemble_predictions = (ensemble_valid_preds >= threshold).astype(int)\n",
+    "    f1 = f1_score(y_train, ensemble_predictions)\n",
+    "    \n",
+    "    if f1 > best_f1_score:\n",
+    "        best_f1_score = f1\n",
+    "        best_threshold = threshold\n",
+    "\n",
+    "print(\"\\nBest F1 Score:\", best_f1_score)\n",
+    "print(\"Best Threshold:\", round(best_threshold,1))\n",
+    "\n",
+    "\n",
+    "# Calculate predictions for the ensemble model\n",
+    "ensemble_predictions = (ensemble_valid_preds >= best_threshold).astype(int)\n",
+    "\n",
+    "# Calculate the confusion matrix\n",
+    "confusion = confusion_matrix(y_train, ensemble_predictions)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(y_train, ensemble_predictions)\n",
+    "\n",
+    "# Calculate precision\n",
+    "precision = precision_score(y_train, ensemble_predictions)\n",
+    "\n",
+    "# Calculate recall\n",
+    "recall = recall_score(y_train, ensemble_predictions)\n",
+    "\n",
+    "# Calculate F1 score\n",
+    "f1 = f1_score(y_train, ensemble_predictions)\n",
+    "\n",
+    "# Print the confusion matrix and evaluation metrics\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(confusion)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1 Score:\", f1)"
    ]
   },
   {
