Updated file with output and fixed bug

--- a/4. Compiled Model.ipynb
+++ b/4. Compiled Model.ipynb
@@ -563,7 +563,7 @@
    "source": [
     "## Local validation \n",
     "\n",
-    "We conduct a train-test split, where our model is trained on the first 75% of the dataset and assessed on the remaining 25%. In our local validation, the model achieved an AUC of 0.9304. ## LGB LV new non UID: 0.9306\n"
+    "We conduct a train-test split, where our model is trained on the first 75% of the dataset and assessed on the remaining 25%. In our local validation, the model achieved an AUC of 0.9305. "
    ]
   },
   {
