Updated SMOTE AUC value

--- a/3. SMOTE.ipynb
+++ b/3. SMOTE.ipynb
@@ -594,7 +594,7 @@
     "\n",
     "We conduct a train-test split, where our model is trained on the first 75% of the dataset and assessed on the remaining 25%. \n",
     "\n",
-    "During our local validation, we observed that the model achieved an AUC of 1, indicating an exceptionally high level of predictive accuracy. However, this seemingly impressive performance raises concerns about potential overfitting, especially in the context of using SMOTE. Overfitting is a common issue associated with SMOTE, as it introduces synthetic data points to balance class distribution. These synthetic data points can closely resemble existing ones and may lead the model to memorize the training data, resulting in overly optimistic validation results.\n",
+    "During our local validation, we observed that the model achieved an AUC of 0.995, indicating an exceptionally high level of predictive accuracy. However, this seemingly impressive performance raises concerns about potential overfitting, especially in the context of using SMOTE. Overfitting is a common issue associated with SMOTE, as it introduces synthetic data points to balance class distribution. These synthetic data points can closely resemble existing ones and may lead the model to memorize the training data, resulting in overly optimistic validation results.\n",
     "\n",
     "Moreover, SMOTE may introduce bias by oversampling the minority class, potentially causing the model to become overly sensitive to that class and overlook the nuances of the majority class. This imbalance in synthetic data generation can influence the model's decision boundaries and lead to suboptimal generalization.\n",
     "\n",
@@ -1150,11 +1150,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "The utilization of SMOTE led to an exceptionally high AUC of 0.995 for both models, whether with or without UID. This outcome appears highly improbable, surpassing the performance of the first place model in the Kaggle competition by a large margin, which achieved an AUC of 0.96. Consequently, we suspect that SMOTE may have induced overfitting of our data points, resulting in the model's inflated AUC score."
+   ]
   },
   {
    "cell_type": "code",
